fix: added margin-bottom to product page container to prevent content from overlapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -410,6 +410,7 @@ h2 {
 
 .product-page-container {
     text-align: center;
+    margin-bottom: 5%;
 }
 
 .product-title-text span {
@@ -751,6 +752,7 @@ footer {
 
 footer p {
     text-align: center;
+    color: #383838;
     font-family: 'Poppins', sans-serif;
     font-size: 1.5rem;
     padding-bottom: 50px;
